--- a/friends.html
+++ b/friends.html
@@ -29,7 +29,7 @@
     <body class="container-fluid mt-4 d-flex flex-wrap">
         <div class="d-flex flex-wrap">
             <div class="card">
-                <img class="card-img-top" src="../../Public/Assets/SSC/A.Usha.jpg">
+                <img class="card-img-top" src="././Public/Assets/SSC/A.Usha.jpg">
                 <div class="card-header">
                     <p class="btn btn-outline-primary text-bg-dark"> A.Usha </p>
                 </div>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../../Public/Assets/SSC/ganesh.jpg"> Sorry no picture avilable
+                <img class="card-img-top" src="././Public/Assets/SSC/ganesh.jpg"> Sorry no picture avilable
                 <div class="card-header">
                     <p class="btn btn-outline-primary text-bg-dark"><span class="bi bi-person"></span> GANESH </p>
                 </div>
